export default {
  Home: "Home",
  Booking: "Booking",
  Inbox: "Inbox",
  Account: "Account",
  MaidService: "Maid Service",
  NanyService: "Nanny Service",
  ElderService: "Elder Service",
  CleaningService: "Cleaning Service",
  PetcareService: "Petcare Service",
  MY_BOOKING: "MY BOOKING",
  FAVOURITE: "FAVOURITE",
  PROMOTIONS: "PROMOTIONS",
  PAYMENT: "PAYMENT",
  HISTORY: "HISTORY",
  REFER_TO_FRIEND: "FRIEND SHARE",
  ADDRESS: "ADDRESS",
  SUBSCRIPTION_MENU: "SUBSCRIPTION MENU",
  ABOUT_US: "ABOUT US",
  REMOVE_ACCOUNT: "REMOVE ACCOUNT",
  Female: "Mrs",
  Male: "Mr",
  Miss: "Ms",
  Other: "Other",
  Not_yet: "Not yet",
  All: "All",
  Sunday: "Sunday",
  Monday: "Monday",
  Tuesday: "Tuesday",
  Wednesday: "Wednesday",
  Thursday: "Thursday",
  Friday: "Friday",
  Saturday: "Saturday",
  Subscribe: "Subscribe",
  Are_you_sure: "Are you sure",
  Pending: "Pending",
  Match: "Match",
  Completed: "Completed",
  Cancel: "Cancel",
  On_Process: "On Process",
  Waiting_confirm: "Waiting confirm",
  confirmed: "Confirmed",
  Received: "Received",
  auth: {
    email: "Email",
    password: "Password",
    confirm_password: "Confirm Password",
    repassword: "Confirm Password",
    forgot_password: "Forgot Password?",
    sign_in: "Sign In",
    or: "OR",
    login_with: "Sign in with:",
    no_account: "Your don't have an account?",
    sign_up: "Sign Up",
    fullname: "Full name",
    firstname: "First name",
    lastname: "Last name",
    phone: "Phone No.",
    address: "Address",
    address_here: "Address here *",
    add_address: "Add address",
    add_new_address: "Add new address",
    no_address: "No address",
    district: "District",
    city: "Province",
    ID: "ID",
    mail: "E-mail",
    gender: "Gender",
    sponsor: "Reference",
    ref_code: "Ref code",
    friend: "Friend",
    next: "Next",
    login: "Log in",
    logout: "Log out",
    otp: "OTP",
    send_otp: "Send OTP",
    confirm: "Confirm",
    validate: "Please enter information.",
    validate_full_name: "Please enter information.",
    missing_login: "Email or Password is missing!",
    missing_email: "Please enter your email address.",
    missing_email_otp: "You must input mail to receive OTP!",
    validate_email: "This email was registered!",
    validate_email_otp: "Your mail is wrong!",
    missing_name: "Fullname is missing!",
    missing_phone: "Please enter your phone number.",
    validate_phone: "Phone no. must have 10 digits. Start from 0!",
    missing_address: "Please enter your address.",
    missing_city: "Province is missing!",
    missing_district: "District is missing!",
    missing_id: "Id is missing!",
    missing_gender: "Gender is missing!",
    missing_password:
      "Please enter password. (Must be at least 8 Characters long, one uppercase, letters and number).",
    missing_re_password: "Password must be same.",
    validate_re_password: "Password is wrong!",
    email_and_password_null: "You must input log in information!",
    missing_otp: "You must input OTP to confirm!",
    error_confirm: "Password & Confirm Password don’t match!",
    validate_password:
      "Password must be at least 8 Characters long, one uppercase, letters and number",
    error: "Something wrong",
    error_occurred: "An error occurred",
    register_success: "Account registered successfully",
    token_expired: "Token expired",
    remove_account: "Are you sure to remove your account?",
  },
  home: {
    benefits: "Benefits",
    code: "Code",
    date: "Date",
    start: "Start",
    end: "End",
    description: "Description",
    frequent_activity: "Favourite",
    error_400: "Request failed with status code 400",
    ok: "OK",
    repeat: "Repeat",
    timesBook: "times booking: every",
    auto_renew: "Auto renew subscription",
    four_weeks: "Four weeks from:",
    upcoming: "Upcoming",
    success: "Success",
    back_to_home: "Back to home",
    undo: "Undo",
    back: "Back",
    close: "Close",
    apply: "Apply",
    update: "Update",
    upgrade_to: "Upgrade to",
    name: "Name",
    done: "Done",
    when: "When",
    pet_profile: "Pet profile",
    petcare_empty: "Pet profile must not empty",
    apply_point: "Apply point",
    apply_promotion: "Apply promotion",
    confirm_delete_card: "Confirm delete this card ?",
    confirm_delete: "Confirm delete ",
    add: "Add",
    yes: "Yes",
    agree: "Agree",
    default: "Default",
    no: "No",
    delete: "Delete",
    delete_successfully: "Delete successfully",
    cancel: "Cancel",
    data_empty: "Data empty",
    notification: "Notification",
    detail_notification: "Detail Notification",
    promotion: "Promotion",
    notification_empty: "Notification is empty",
    promotion_empty: "Promotion is empty",
    edit_success: "Edit Success",
    update_profile: "Update profile",
    edit_profile: "Edit profile",
    update_avata: "Update avatar",
    update_successfully: "Update successfully",
    image_library: "Image library",
    permission_camera:
      "Sorry, we need camera roll permissions to make this work!",
    camera: "Camera",
    save: "Save",
    edit: "Edit",
    point: "Point",
    points: "points",
    you_will_receive: "you will receive",
    login_by: "Login by",
    service: "Service",
    service_name: "Service name",
    services: "Services",
    year_old: "Year old",
    view_all: "View all",
    address: "Address",
    option: "Option",
    payment: "Payment",
    silver: "Silver",
    gold: "Gold",
    platinum: "Platinum",
    confirm_payment: "Confirm payment",
    total: "Total",
    history: "History",
    reason: "Reason",
    frequent_activities: "Favourite",
    reason_canceled: "Reason canceled",
    submit_cancel: "Submit cancel",
    detail_history: "Detail history",
    re_order: "Re-order",
    how_many_hour: "How many Hour(s)",
    hour_left: "hours left",
    time_slot: "Time slot",
    start_time: "Start time",
    service_detail: "Service details",
    need_service: "When do you need this service?",
    select_date_time: "Select date and time",
    day_in_week: "Day in week",
    date_not_min: "You can not select day and time in past",
    prefer_language: "Prefer language",
    specify_helper: "Specific helper (if you have)",
    pick_service_date: "Please pick the service date from above calendar",
    select_helper: "Select helper",
    search_helper: "Search helper",
    suggest_for_you: "Suggest for you",
    your_helper: "Your helper",
    choose_language: "Choose language",
    extra_service: "Extra service",
    date_empty: "Please select date",
    please_select_hour: "Please select hour",
    room_no: "Room No. / Floor",
    phone_no: "Phone No.",
    remarks: "Condo Name",
    condo: "Condo",
    apartment: "Apartment",
    house: "House",
    type: "Type",
    status: "Status",
    activities: "Activities",
    activities_empty: "Activities must not empty",
    select_home_type: "Select home type",
    how_many_bedroom: "How many Bedroom(s)",
    how_many_bathroom: "How many Bathroom(s)",
    validate_position: "Please fill all information",
    validate_phone: "Please type phone number",
    validate_address: "Please pick your address",
    special_task: "Special task",
    special_request: "Special request",
    extra_kids: "Extra kids",
    extra_pet: "Extra pet",
    payment_method: "Payment method",
    cash: "Cash",
    times: "times",
    credit_card: "Credit card",
    add_card_success: "Add card success",
    add_new_card: "Add new card",
    select_card: "Select card",
    selected: "Selected",
    card_empty: "Card empty",
    you_earn: "You've earn",
    reward_point: "Reward point",
    thank_you: "Thank you",
    please_wait: "Please wait for confirmation while we arrange our service",
    booking_detail: "Booking detail",
    booking_date: "Booking date",
    booking_cancel: "Booking cancel!",
    select_your_helper: "Select your helper",
    copy_success: "Copy to clipboard success",
    voucher_code: "Voucher code",
    point_empty: "Point is empty",
    voucher_empty: "Voucher code is empty",
    voucher_not_support: "Voucher code is not support",
    point_validate: "Point must from 100 to 200",
    point_not_enough: "Your point not enough to discount",
    view_detail: "View detail",
    detail_promotion: "Detail Promotion",
    subscription_price: "Subscription price",
    cancel_subscription: "Cancel subscription",
    auto_renew_subscription: "Auto renew subscription",
    fix_plan: "Subscription",
    reason_cancel: "Reason to cancel subscription",
    fexible_plan: "Fexible plan",
    current_plan: "Current plan",
    total_price: "Total price",
    total_hour: "Total hour",
    price_per_hour: "Price per hour",
    review: "Review",
    review_service: "Review service",
    services_done: "services done",
    send_review_successfully: "Send review successfully",
    maid: "Maid",
    nanny: "Nanny",
    eldercare: "Eldercare",
    fifteen_or_less: "15 or less",
    thirty_or_less: "30 or less",
    fortyFive_or_less: "45 or less",
    fortyFive_or_more: "45 or more",
    subscription_plan: "Subscription plan",
    number_kids: "Number Kids",
    number_pet: "Number pet",
    age: "Age Kids",
    age_patient: "Age Patient",
    select_age: "Please specify kids age.",
    patient_age: "Please specify patient age.",
    updates_promotions: "Updates & Promotions",
    text_desc_supscription_price:
      "When you buy subscription plan will be cheaper than one-time booking",
    you_received: "you received",
    contact_staff: "Contact staff",
    monthly: "Monthly",
    month: "month",
    weekly: "Weekly",
    prefer_to_friend: "Invite Friends",
    copy: "Copy",
    list_friends: "List friends",
    favourite_service: "Favourite service",
    favourite_service_providers: "Favourite service providers",
    not_subcribed: "Not subscribed",
    i_have_read_agreement: "I' have read and agree to this agreement",
    included_transportation_cost: "Included transportation cost",
    request_when_needed: "Request when needed",
    guarantee_if_not_satisfy: "100% money back guarantee if not satisfy",
    coming_soon: "Service coming soon.",
  },
  address: {
    pick_location: "Pick Location",
    search: "Search address",
    edit_success: "Address updated successfully!",
    permission_location: "Please grant the location permission.",
    please_pick_your_address: "Please pick your address",
  },
  plan: {
    day_in_week: "Day in week",
    how_many_hour: "How many hour(s)",
    time_slot: "Time slot",
    back_to_home: "Back to Home",
    total_vat: "Total (VAT inc.)",
    total: "Total price for",
    valid_times: "Please add times",
  },
};
