...
              alignItems: "center",
              justifyContent: "center",
              marginRight: 16,
            }}
          >
            <TouchableOpacity
              testID="account-logout-button"
              accessibilityLabel="account-logout-button"
              onPress={logout}
              style={{
                alignItems: "center",
                justifyContent: "center",
              }}
...
